project objects are aligned correctly

--- a/src/components/project/project.style.desktop.scss
+++ b/src/components/project/project.style.desktop.scss
@@ -29,13 +29,43 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.project__item {
+.project__item__line {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-column: span 2;
+}
+
+.project__item__right {
+  margin-bottom: 100px;
+  float: right;
+  text-align: right;
+  border-right: 1px solid $next__coral;
+  padding-right: 20px;
+  grid-column: 1;  
+}
+
+.spacer__right {
+  width: 100%;
+  height: 100%;
+  // background-color: red;
+  grid-column: 2;
+}
+
+.spacer__left {
+  width: 100%;
+  height: 100%;
+  content: "";
+  // background-color: red;
+  grid-column: 1;
+}
+
+.project__item__left {
+  margin-bottom: 100px;
+  text-align: left;
+  float: left;
   border-left: 1px solid $next__coral;
   padding-left: 20px;
-  margin-bottom: 100px;
-  grid-column: span 2;
+  grid-column: 2;
 }
 
 .project__item__title {
